cealdemo/tests/neg3/209.gold
Error: (line 6:11 'b') Cannot resolve 'b' - autobits expect constant expression
